change .env file configurations

--- a/.env
+++ b/.env
@@ -15,6 +15,13 @@ DB_DATABASE=u726708065_pps_official
 DB_USERNAME=u726708065_feline_lab
 DB_PASSWORD=@Felinelab345
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=voting_db
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
